Start webpage media queries

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <!-- Project One -->
           <div class="inner">
             <p class="subtitle">Project One</p>
+            <p class="featured-title">Featured Project</p>
             <p class="featured-desc">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -72,9 +73,8 @@
       <!-- Project Two -->
       <div class="portfolio-wrapper transition3">
         <div class="portfolio-left">
-          <!-- Project One -->
           <div class="inner">
-            <p class="subtitle">Project One</p>
+            <p class="subtitle">Project Two</p>
             <p class="featured-title">Featured Project</p>
             <p class="featured-desc">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -84,7 +84,7 @@
             </p>
           </div>
         </div>
-        <a href="#">
+        <a href="">
           <img src="images/placeholder.png" alt="Project Two" />
         </a>
       </div>
@@ -92,9 +92,8 @@
       <!-- Project Three -->
       <div class="portfolio-wrapper transition3">
         <div class="portfolio-left">
-          <!-- Project One -->
           <div class="inner">
-            <p class="subtitle">Project One</p>
+            <p class="subtitle">Project Three</p>
             <p class="featured-title">Featured Project</p>
             <p class="featured-desc">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
