--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Alex Whitmore Portfolio</title>
   </head>
@@ -30,6 +35,21 @@
           </ul>
         </nav>
       </header>
+
+      <!-- Social Links -->
+      <div class="social-header">
+        <ul>
+          <li>
+            <a href="#"><i class="fab fa-github"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+          </li>
+        </ul>
+      </div>
     </div>
 
     <!-- Introduction Section -->
