Update about me section

--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
         <div class="about-me-item">
           <h2>About Me</h2>
           <p>
+            Hi there! I'm Alex, a software engineer based out of Providence,
+            RI.<br /><br />
             I love builidng things from websites, applications, or a rock
             climbing gym in my living room. I strive to raise the bar, think
             outside of the box, and provide a great-looking and performant
