Update arragement and social links

--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
         <ul>
           <li>
             <a href="https://github.com/alexwhitmore" target="_blank"
-              ><i class="fab fa-github"></i
+              ><i class="fab fa-github fa-2x"></i
             ></a>
           </li>
           <li>
             <a
               href="https://www.linkedin.com/in/alex-whitmore-167896153/"
               target="_blank"
-              ><i class="fab fa-linkedin-in"></i
+              ><i class="fab fa-linkedin-in fa-2x"></i
             ></a>
           </li>
           <li>
             <a href="https://twitter.com/theAlexWhitmore" target="_blank"
-              ><i class="fab fa-twitter"></i
+              ><i class="fab fa-twitter fa-2x"></i
             ></a>
           </li>
         </ul>
@@ -64,8 +64,18 @@
     <section>
       <div class="hero">
         <div class="content">
-          <h1>Fullstack Developer</h1>
-          <p>Crafting efficient, functional and beautiful user experiences.</p>
+          <h1>Who I am</h1>
+          <p>
+            <strong>Developer</strong> who focuses on writing clean and
+            efficient code. An <strong>enthusiast</strong> of taking complex
+            problems and creating a clear and simple solution.
+          </p>
+          <p>
+            <strong>Designer</strong> that strives to help solve problems by
+            understanding the needs and requirements of a project. I have a
+            <strong>passion</strong> for crafting beautiful and functional user
+            experiences.
+          </p>
           <a href="contact.html" class="hero-button">Let's Talk</a>
         </div>
         <img
@@ -73,6 +83,29 @@
           alt="Hero Illustration"
           class="hero-design"
         />
+      </div>
+    </section>
+
+    <!-- About Me Section -->
+    <section id="about">
+      <div class="about-me">
+        <div class="about-me-item">
+          <h2>About Me</h2>
+          <p>
+            Hi there! I'm Alex, a software engineer based out of Providence,
+            RI.<br /><br />
+            I love builidng things from websites, applications, or a rock
+            climbing gym in my living room. I strive to raise the bar, think
+            outside of the box, and provide a great-looking and performant
+            experience. I love having the opportunity to work with others. I
+            find that the best solutions always come from putting more than one
+            head together! When I'm not coding, you can find me rock climbing
+            somewhere, drinking coffee, or playing with someone's dog.
+          </p>
+        </div>
+        <div class="about-me-item about-me-item-double">
+          <img src="images/placeholder.png" alt="" />
+        </div>
       </div>
     </section>
 
@@ -122,6 +155,7 @@
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat.
             </p>
+            <p class="featured-desc"><strong>Technoloy Used: </strong>Lorem</p>
           </div>
         </div>
         <a href="">
@@ -141,6 +175,7 @@
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat.
             </p>
+            <p class="featured-desc"><strong>Technoloy Used: </strong>Lorem</p>
           </div>
         </div>
         <a href="#">
@@ -149,26 +184,6 @@
       </div>
     </section>
 
-    <!-- About Me Section -->
-    <section id="about">
-      <div class="about-me">
-        <div class="about-me-item">
-          <h2>About Me</h2>
-          <p>
-            Hi there! I'm Alex, a software engineer based out of Providence,
-            RI.<br /><br />
-            I love builidng things from websites, applications, or a rock
-            climbing gym in my living room. I strive to raise the bar, think
-            outside of the box, and provide a great-looking and performant
-            experience. When I'm not coding, you can find me rock climbing
-            somewhere, drinking coffee, or playing with someone's dog.
-          </p>
-        </div>
-        <div class="about-me-item about-me-item-double">
-          <img src="images/placeholder.png" alt="" />
-        </div>
-      </div>
-    </section>
     <footer class="footer">
       <a href="mailto:heyimalexw@gmail.com" class="footer-link"
         >heyimalexw@gmail.com</a
