--- a/contact.html
+++ b/contact.html
@@ -41,19 +41,19 @@
         <ul>
           <li>
             <a href="https://github.com/alexwhitmore" target="_blank"
-              ><i class="fab fa-github"></i
+              ><i class="fab fa-github fa-2x"></i
             ></a>
           </li>
           <li>
             <a
               href="https://www.linkedin.com/in/alex-whitmore-167896153/"
               target="_blank"
-              ><i class="fab fa-linkedin-in"></i
+              ><i class="fab fa-linkedin-in fa-2x"></i
             ></a>
           </li>
           <li>
             <a href="https://twitter.com/theAlexWhitmore" target="_blank"
-              ><i class="fab fa-twitter"></i
+              ><i class="fab fa-twitter fa-2x"></i
             ></a>
           </li>
         </ul>
@@ -63,7 +63,7 @@
     <section>
       <h2>Let's get in touch!</h2>
       <div class="form-container">
-        <form action="https://formspree.io/heyimalexw@gmail.com" method="post">
+        <form action="https://formspree.io/myybowlj" method="post">
           <label for="user-name">Name:</label>
           <input
             type="text"
@@ -91,5 +91,41 @@
         </form>
       </div>
     </section>
+
+    <!-- Footer Section -->
+    <footer class="footer">
+      <a href="mailto:heyimalexw@gmail.com" class="footer-link"
+        >heyimalexw@gmail.com</a
+      >
+
+      <ul class="social-list">
+        <!-- Social Link One, LinkedIn -->
+        <li class="social-list__item">
+          <a
+            class="social-list__item"
+            href="https://www.linkedin.com/in/alex-whitmore-167896153/"
+          >
+            <i class="fab fa-linkedin-in"></i
+          ></a>
+        </li>
+
+        <!-- Social Link Two, Github -->
+        <li class="social-list__item">
+          <a class="social-list__item" href="https://github.com/alexwhitmore"
+            ><i class="fab fa-github"></i
+          ></a>
+        </li>
+
+        <!-- Social Link Three, Twitter -->
+        <li class="social-list__item">
+          <a
+            class="social-list__item"
+            href="https://twitter.com/theAlexWhitmore"
+          >
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
