--- a/contact.html
+++ b/contact.html
@@ -93,39 +93,41 @@
     </section>
 
     <!-- Footer Section -->
-    <footer class="footer">
-      <a href="mailto:heyimalexw@gmail.com" class="footer-link"
-        >heyimalexw@gmail.com</a
-      >
+    <section class="flex-wrapper">
+      <footer class="footer">
+        <a href="mailto:heyimalexw@gmail.com" class="footer-link"
+          >heyimalexw@gmail.com</a
+        >
 
-      <ul class="social-list">
-        <!-- Social Link One, LinkedIn -->
-        <li class="social-list__item">
-          <a
-            class="social-list__item"
-            href="https://www.linkedin.com/in/alex-whitmore-167896153/"
-          >
-            <i class="fab fa-linkedin-in"></i
-          ></a>
-        </li>
+        <ul class="social-list">
+          <!-- Social Link One, LinkedIn -->
+          <li class="social-list__item">
+            <a
+              class="social-list__item"
+              href="https://www.linkedin.com/in/alex-whitmore-167896153/"
+            >
+              <i class="fab fa-linkedin-in"></i
+            ></a>
+          </li>
 
-        <!-- Social Link Two, Github -->
-        <li class="social-list__item">
-          <a class="social-list__item" href="https://github.com/alexwhitmore"
-            ><i class="fab fa-github"></i
-          ></a>
-        </li>
+          <!-- Social Link Two, Github -->
+          <li class="social-list__item">
+            <a class="social-list__item" href="https://github.com/alexwhitmore"
+              ><i class="fab fa-github"></i
+            ></a>
+          </li>
 
-        <!-- Social Link Three, Twitter -->
-        <li class="social-list__item">
-          <a
-            class="social-list__item"
-            href="https://twitter.com/theAlexWhitmore"
-          >
-            <i class="fab fa-twitter"></i>
-          </a>
-        </li>
-      </ul>
-    </footer>
+          <!-- Social Link Three, Twitter -->
+          <li class="social-list__item">
+            <a
+              class="social-list__item"
+              href="https://twitter.com/theAlexWhitmore"
+            >
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+        </ul>
+      </footer>
+    </section>
   </body>
 </html>
