Delete some files, update form

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <ul class="menu">
             <li><a href="#work">Portfolio</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
       </header>
@@ -181,6 +181,38 @@
         <a href="#">
           <img src="images/placeholder.png" alt="Project Three" />
         </a>
+      </div>
+    </section>
+
+    <section>
+      <h2 id="contact">Let's get in touch!</h2>
+      <div class="form-container">
+        <form action="https://formspree.io/myybowlj" method="post">
+          <label for="user-name">Name:</label>
+          <input
+            type="text"
+            id="user-name"
+            name="name"
+            placeholder="Your name.."
+          />
+
+          <label for="user-email">Email:</label>
+          <input
+            type="text"
+            id="user-email"
+            name="email"
+            placeholder="Enter your email.."
+          />
+
+          <label for="subject">Subject:</label>
+          <textarea
+            name="subject"
+            id="subject"
+            placeholder="Write something.."
+          ></textarea>
+
+          <input type="submit" value="Submit" />
+        </form>
       </div>
     </section>
 
